force-app/main/default/objects/CLevelRelationship__c/CLevelRelationship__c.object-meta.xml
<CustomObject>
    <description>Allows the linking of C-Level user to records.</description>
    <label>C-Level Relationship</label>
    <nameField>
        <displayFormat>CLR-{0000}</displayFormat>
        <label>C-Level Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>C-Level Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>