force-app/main/default/objects/CLevelRelationship__c/fields/AccountRef__c.field-meta.xml
<CustomField>
    <fullName>AccountRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>C-Level Relationships</relationshipLabel>
    <relationshipName>C_Level_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>