force-app/main/default/objects/CLevelRelationship__c/fields/ContactRef__c.field-meta.xml
<CustomField>
    <fullName>ContactRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>C-Level Relationships</relationshipLabel>
    <relationshipName>C_Level_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>