force-app/main/default/objects/CLevelRelationship__c/fields/UserRef__c.field-meta.xml
<CustomField>
    <fullName>UserRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Lookup</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.C_Level_User__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>C_Level_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>